Changes from Tenzin's version:

[x] colour scheme
[x] using font-awesome instead of images
[x] adding more buttons, e.g. reset, had fun, not fun
[ ] fixed-height box around result text
[ ] custom colour picker? (use JS to change CSS)
[ ] user pic or icon instead of subscript
[ ] layout with CSS grid
[ ] add winning total (e.g. first to 21)
[ ] add SASS to calculate position of user and comp over score board
[ ] centre colon in scoreboard