@@ -19,6 +19,42 @@ header > h1 {
   text-align: center;
 }
 
+.score-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  text-align: center;
+  position: relative;
+  align-items: center;
+}
+
+.score-container i {
+  padding: 15px;
+  border-radius: 50%;}
+
+.score-container .far, .score-container .fas {
+  font-size: 3.5em;
+  color: white;
+}
+
+.user-profile {
+  padding: 15px;
+  justify-self: end;
+}
+
+.computer-profile {
+  padding: 15px;
+  justify-self: start;
+}
+
+.player-glow {
+  box-shadow: 0 0 12px 5px #2ea732;
+}
+
+
+.score-part {
+  grid-row: span;
+}
+
 .score-board {
   border: solid white 3px;
   width: 200px;
@@ -26,7 +62,7 @@ header > h1 {
   text-align: center;
   color: white;
   font-size: 46px;
-  border-radius: 4px;
+  border-radius: 5px;
   padding: 15px 20px;
   position: relative;
 }
@@ -43,7 +79,6 @@ header > h1 {
   top: 30px;
   left: -25px;
 }
-
 
 #computer-label {
   position: absolute;
@@ -92,10 +127,6 @@ header > h1 {
   color: white;
   font-size: 2rem;
   margin-top: 25px;
-}
-
-.text-green-glow {
-  box-shadow: 0 0 10px #2ea732;
 }
 
 .green-glow {
